--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body>
-<h1>I don't like it,and I'm sorry I ever had anything to do with it. #es</h1>
+<body style ="backgroud: url (https://github.com/vmCLXV/AlwaysInSuperposition/blob/master/space-bg.jpg); background-size 100% 100%">
+<h1 color:white>I don't like it,and I'm sorry I ever had anything to do with it. #es</h1>
 </body>
 </html>
