--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html >
     <head>
         <meta charset="UTF-8">
-        <title>Text Neon</title>
+        <title>AlwaysInSuperposition</title>
         <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' />
         <link href='https://fonts.googleapis.com/css?family=Monoton' rel='stylesheet' />
         <link href='https://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' />
